# serializer version: 1
# name: TestPosterTemplate.test_topic_from_other_public_forum_in_topics_view[topic_from_other_public_forum_in_topics_view]
  '''
  <small class="text-muted poster-infos">
      Par :
              
                  
                  <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="member" href="/members/profile/poster_username/">
                      Alan T.
                  </a>,
              
              
                  dans <a href="forum_url">Abby's Forum</a>,
      il y a 0 minute
      
  </small>
  '''
# ---
# name: TestPosterTemplate.test_topic_in_its_own_public_forum[topic_in_its_own_public_forum]
  '''
  <small class="text-muted poster-infos">
      Par :
              
                  
                  <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="member" href="/members/profile/poster_username/">
                      Dermot T.
                  </a>,
      il y a 0 minute
      
  </small>
  '''
# ---
# name: TestPosterTemplate.test_topic_in_topics_view[topic_in_topics_view]
  '''
  <small class="text-muted poster-infos">
      Par :
              
                  
                  <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="member" href="/members/profile/poster_username/">
                      Jeff B.
                  </a>,
      il y a 0 minute
      
  </small>
  '''
# ---
# name: test_breadcrumbs_on_topic_view[discussion_area_topic]
  '''
  <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              <li class="breadcrumb-item">
                  
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="topics_breadcrumb" href="/topics/">Espace d'échanges</a>
                  
              </li>
              
                  
              
              
                  <li class="breadcrumb-item">
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="forum" href="/forum/forum-b-[PK of Forum]/">Forum B</a>
                  </li>
              
          </ol>
      </nav>
  '''
# ---
# name: test_breadcrumbs_on_topic_view[discussion_area_toplevel_topic]
  '''
  <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              <li class="breadcrumb-item">
                  
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="topics_breadcrumb" href="/topics/">Espace d'échanges</a>
                  
              </li>
              
              
          </ol>
      </nav>
  '''
# ---
# name: test_breadcrumbs_on_topic_view[documentation_topic]
  '''
  <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              <li class="breadcrumb-item">
                  
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="documentation_breadcrumb" href="/documentation/">Documentation</a>
                  
              </li>
              
                  
                      <li class="breadcrumb-item">
                          <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="forum" href="/forum/d-category-[PK of Forum]/">D Category</a>
                      </li>
                  
              
              
                  <li class="breadcrumb-item">
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="forum" href="/forum/d-category-forum-[PK of Forum]/">D Category - Forum</a>
                  </li>
              
          </ol>
      </nav>
  '''
# ---
# name: test_breadcrumbs_on_topic_view[newsfeed_topic]
  '''
  <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              <li class="breadcrumb-item">
                  
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="newsfeed_breadcrumb" href="/news/">Actualités</a>
                  
              </li>
              
              
          </ol>
      </nav>
  '''
# ---
# name: test_queryset_for_tagged_topic[tagged_topic]
  '''
  <div class="flex-grow-1" id="topic-list-filter-header">
                      <span class="h5 m-0">1 question
                          avec l'étiquette buckley
                      </span>
                  </div>
  '''
# ---
# name: test_queryset_for_tagged_topic[tagged_topics]
  '''
  <div class="flex-grow-1" id="topic-list-filter-header">
                      <span class="h5 m-0">2 questions
                          avec l'étiquette buckley
                      </span>
                  </div>
  '''
# ---
